Changes done related to containerview

--- a/WeatherApp/WeatherApp/Resources/Storyboards/Base.lproj/Main.storyboard
+++ b/WeatherApp/WeatherApp/Resources/Storyboards/Base.lproj/Main.storyboard
@@ -356,8 +356,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hlN-Fv-OH9" userLabel="ForecastView">
                                 <rect key="frame" x="416.66666666666674" y="0.0" width="509.33333333333326" height="428"/>
                                 <subviews>
-                                    <containerView opaque="NO" contentMode="scaleToFill" id="h1I-dJ-kSp" userLabel="ContainerView">
-                                        <rect key="frame" x="0.0" y="0.0" width="509.33333333333331" height="428"/>
+                                    <containerView opaque="NO" contentMode="scaleToFill" ambiguous="YES" id="h1I-dJ-kSp" userLabel="ContainerView">
+                                        <rect key="frame" x="0.0" y="0.0" width="509" height="428"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
@@ -365,7 +365,7 @@
                                         </connections>
                                     </containerView>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="h1I-dJ-kSp" firstAttribute="top" secondItem="hlN-Fv-OH9" secondAttribute="top" id="A2Z-1c-edz"/>
                                     <constraint firstAttribute="bottom" secondItem="h1I-dJ-kSp" secondAttribute="bottom" id="OJ0-iU-brx"/>
@@ -383,7 +383,6 @@
                             <constraint firstItem="hlN-Fv-OH9" firstAttribute="leading" secondItem="laj-qg-FoE" secondAttribute="trailing" id="FTa-RL-e4h"/>
                             <constraint firstAttribute="trailing" secondItem="hlN-Fv-OH9" secondAttribute="trailing" id="Ibx-Or-Npo"/>
                             <constraint firstItem="laj-qg-FoE" firstAttribute="trailing" secondItem="hlN-Fv-OH9" secondAttribute="leading" id="J8W-z1-k3K"/>
-                            <constraint firstItem="hlN-Fv-OH9" firstAttribute="width" secondItem="asJ-b6-o1s" secondAttribute="width" multiplier="0.55" id="JCJ-QI-IU1"/>
                             <constraint firstAttribute="trailing" secondItem="laj-qg-FoE" secondAttribute="trailing" id="OCn-UD-xDj"/>
                             <constraint firstItem="laj-qg-FoE" firstAttribute="leading" secondItem="asJ-b6-o1s" secondAttribute="leading" id="Otx-GL-0GV"/>
                             <constraint firstItem="hlN-Fv-OH9" firstAttribute="top" secondItem="asJ-b6-o1s" secondAttribute="top" id="TgM-i7-2ES"/>
@@ -409,7 +408,6 @@
                                 <exclude reference="BUL-fc-vMs"/>
                                 <exclude reference="FTa-RL-e4h"/>
                                 <exclude reference="Ibx-Or-Npo"/>
-                                <exclude reference="JCJ-QI-IU1"/>
                                 <exclude reference="TgM-i7-2ES"/>
                                 <exclude reference="eI3-nI-RZh"/>
                                 <exclude reference="k9o-ct-ypt"/>
@@ -424,7 +422,6 @@
                                 <include reference="dog-nj-7l7"/>
                                 <include reference="eMl-DR-dGI"/>
                                 <include reference="Ibx-Or-Npo"/>
-                                <include reference="JCJ-QI-IU1"/>
                                 <include reference="TgM-i7-2ES"/>
                                 <include reference="l0N-dh-55W"/>
                             </mask>
@@ -744,36 +741,36 @@
             <objects>
                 <viewController id="uIQ-MO-GTD" customClass="ForecastViewController" customModule="WeatherApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kLL-cp-58w">
-                        <rect key="frame" x="0.0" y="0.0" width="509.33333333333331" height="428"/>
+                        <rect key="frame" x="0.0" y="0.0" width="509" height="428"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mjG-DT-Vz3">
-                                <rect key="frame" x="0.0" y="0.0" width="509.33333333333331" height="0.66666666666666663"/>
+                                <rect key="frame" x="0.0" y="0.0" width="509" height="0.66666666666666663"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="0.5" id="fIy-nl-DNK"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yQV-a6-ktL">
-                                <rect key="frame" x="0.0" y="0.66666666666665719" width="509.33333333333331" height="427.33333333333337"/>
+                                <rect key="frame" x="0.0" y="0.66666666666665719" width="509" height="427.33333333333337"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="separatorColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="ForecastCell" rowHeight="50" id="Cl0-pW-L1c" customClass="ForecastCell" customModule="WeatherApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="24.333333969116211" width="509.33333333333331" height="50"/>
+                                        <rect key="frame" x="0.0" y="24.333333969116211" width="509" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Cl0-pW-L1c" id="qdo-VT-EbI">
-                                            <rect key="frame" x="43.999999999999972" y="0.0" width="465.33333333333331" height="50"/>
+                                            <rect key="frame" x="44" y="0.0" width="465" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Sun" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hda-1I-7Zc">
-                                                    <rect key="frame" x="16" y="16" width="168.33333333333334" height="18"/>
+                                                    <rect key="frame" x="16" y="16" width="168" height="18"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="awP-1U-awc">
-                                                    <rect key="frame" x="194.33333333333337" y="15" width="255" height="20"/>
+                                                    <rect key="frame" x="194" y="15" width="255" height="20"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="windy" translatesAutoresizingMaskIntoConstraints="NO" id="36n-YI-Q2E">
                                                             <rect key="frame" x="0.0" y="0.0" width="60" height="20"/>
@@ -783,7 +780,7 @@
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="80%" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="riV-fM-Q9y">
-                                                            <rect key="frame" x="64.999999999999972" y="0.0" width="60" height="20"/>
+                                                            <rect key="frame" x="65" y="0.0" width="60" height="20"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="60" id="iY9-hy-3rX"/>
                                                             </constraints>
@@ -792,7 +789,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="90" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="arG-vs-6Mq">
-                                                            <rect key="frame" x="129.99999999999997" y="0.0" width="60" height="20"/>
+                                                            <rect key="frame" x="130" y="0.0" width="60" height="20"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="60" id="1v5-CC-ySe"/>
                                                             </constraints>
@@ -801,7 +798,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QvJ-iu-9kF">
-                                                            <rect key="frame" x="194.99999999999997" y="0.0" width="60" height="20"/>
+                                                            <rect key="frame" x="195" y="0.0" width="60" height="20"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="60" id="vyj-de-u2g"/>
                                                             </constraints>
@@ -812,7 +809,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aD8-3G-455">
-                                                    <rect key="frame" x="0.0" y="49.666666666666664" width="465.33333333333331" height="0.3333333333333357"/>
+                                                    <rect key="frame" x="0.0" y="49.666666666666664" width="465" height="0.3333333333333357"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="0.5" id="0F9-ue-LIj"/>
